Segunda de Segunda Versão

--- a/.index.html
+++ b/.index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="funcionarios.html">Funcionários</a>
+    <h1>Bem Vindos ao Git</h1>
+    <button><a href=".funcionarios.html">Funcionários</a></button>
+    
 </body>
 </html>
